<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MSaver</string>
    <string name="title_stat">Statistics</string>
    <string name="title_income">Income</string>
    <string name="title_expenses">Expenses</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="price">price</string>
    <string name="product">product</string>
    <string name="date">Date</string>
    <string name="expence_date">Expense date</string>
    <string name="last_buys">Last Buys</string>
    <string name="balance">Balance</string>
    <string name="income_date">Income date</string>
    <string name="income">income</string>
    <string name="last_incomes">Last Incomes</string>
    <string name="amount">amount</string>
    <string name="categories">Categories</string>
    <string name="done">Done</string>
    <string name="add_category">add category</string>
    <string name="selectChartType">Select Chart Type</string>
    <string name="fromDate">From Date</string>
    <string name="server_addr">Server IP Address</string>
    <string name="sync">Sync</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="shop_list">Shopping List</string>
    <string name="scan">Scan</string>
    
</resources>