<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/incomeTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/income_date" />

        <TextView
            android:id="@+id/incomeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0066ff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/incomeProductEnter"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/income" >

            <requestFocus />
        </AutoCompleteTextView>

        <EditText
            android:id="@+id/incomeSumEnter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="phone" />
        
    </LinearLayout>

    <Button
            android:id="@+id/incomeAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add" />

    <TextView
        android:id="@+id/incomeTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/last_incomes" />
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TableLayout
                android:id="@+id/last_incomes"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:weightSum="1.0"
                android:layout_above="@+id/incomeBalance_layout" >

                <TableRow
                    android:id="@+id/incomeTableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/incomeTableProductTextRow1"
                    android:layout_width="0dp"
                    android:layout_weight=".65"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:maxLength="14"
                    android:ellipsize="end"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />

                <TextView
            android:id="@+id/incomeTablePriceTextRow1"
            android:layout_width="0dp"
            android:layout_weight=".35"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" 
            android:textIsSelectable="true"            
            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </TableRow>

                <TableRow
                    android:id="@+id/incomeTableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/incomeTablePriceTextRow2"
                    android:layout_width="0dp"
                    android:layout_weight=".65"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:textIsSelectable="true" 
                     android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
            android:id="@+id/incomeTableSumTextRow2"
            android:layout_width="0dp"
            android:layout_weight=".35"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" 
            android:textIsSelectable="true" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </TableRow>

                <TableRow
                    android:id="@+id/incomeTableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/incomeTablePriceTextRow3"
                    android:layout_width="0dp"
                    android:layout_weight=".65"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textIsSelectable="true" 
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
            android:id="@+id/incomeTableSumTextRow3"
            android:layout_width="0dp"
            android:layout_weight=".35"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" 
            android:textIsSelectable="true" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </TableRow>

                <TableRow
                    android:id="@+id/incomeTableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                <TextView
            android:id="@+id/incomeTablePriceTextRow4"
            android:layout_width="0dp"
                    android:layout_weight=".65"
                    android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textIsSelectable="true" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
                <TextView
            android:id="@+id/incomeTableSumTextRow4"
            android:layout_width="0dp"
            android:layout_weight=".35"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" 
            android:textIsSelectable="true" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </TableRow>
                <TableRow
                    android:id="@+id/incomeTableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                <TextView
            android:id="@+id/incomeTablePriceTextRow5"
            android:layout_width="0dp"
                    android:layout_weight=".65"
                    android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textIsSelectable="true" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
                <TextView
            android:id="@+id/incomeTableSumTextRow5"
            android:layout_width="0dp"
            android:layout_weight=".35"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" 
            android:textIsSelectable="true" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </TableRow>
            </TableLayout>
        

        <LinearLayout
            android:id="@+id/incomeBalance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_marginBottom="20dp" >

            <TextView
                android:id="@+id/incomeTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/balance"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/incomeBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
