<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/expence_date" />

        <TextView
            android:id="@+id/expenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0066ff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/expenseProductEnter"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/product" >

            <requestFocus />
        </AutoCompleteTextView>

        <EditText
            android:id="@+id/expensePriceEnter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="phone" />
    </LinearLayout>

    <Button
        android:id="@+id/expenseAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add" />

    <TextView
        android:id="@+id/lastBuysHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/last_buys" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/balance_layout"
            android:weightSum="1.0"
            >  
        <LinearLayout 
            android:id="@+id/shopping_list"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        </ScrollView>
        
        <TableLayout
            android:id="@+id/last_buys"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/balance_layout"
            android:weightSum="1.0" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/expenseTableProductTextRow1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".65"
                    android:ellipsize="end"
                    android:maxLength="14"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/expenseTablePriceTextRow1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".35"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/expenseTablePriceTextRow2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".65"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/expenseTableSumTextRow2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".35"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/expenseTablePriceTextRow3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".65"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/expenseTableSumTextRow3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".35"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/expenseTablePriceTextRow4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".65"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/expenseTableSumTextRow4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".35"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/expenseTablePriceTextRow5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".65"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/expenseTableSumTextRow5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".35"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textIsSelectable="true" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@id/balance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_marginBottom="20dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/balance"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/expenseBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>